Added GoBack for LoginRegister

--- a/apps/imageApp/templates/imageApp/main_page.html
+++ b/apps/imageApp/templates/imageApp/main_page.html
@@ -20,7 +20,7 @@
         </div>          
 
           <ul class="nav nav-justified nav-pills">
-              <li class="active"><a href="#">Home</a></li>
+              <li class="active"><a href="{%url 'spring:main'%}">Home</a></li>
               <li><a href="{%url 'spring:all_show'%}">All products</a></li>
               <li><a href="#">Contact us</a></li>
               <li><a href="{% url 'users:index'%}">Create an account</a></li>
