--- a/apps/bestLogin/templates/bestLogin/index.html
+++ b/apps/bestLogin/templates/bestLogin/index.html
@@ -43,6 +43,8 @@
                        </p>
                         <p class="change_link">Not a member yet ?
                           <a href="#toregister" class="to_register">Join us</a>
+                          or
+                          <a href="{%url 'spring:main'%}" class="to_register">Go Back</a>
                         </p>
                    </form>
                 </div>
@@ -85,6 +87,8 @@
                         <p class="change_link">
                           Already a member ?
                           <a href="#tologin" class="to_register"> Go and log in </a>
+                          or
+                          <a href="{%url 'spring:main'%}" class="to_register">Go Back</a>
                         </p>
                     </form>
                 </div>
