--- a/apps/imageApp/static/imageApp/css/style2.css
+++ b/apps/imageApp/static/imageApp/css/style2.css
@@ -208,6 +208,7 @@ div.section > div > input {margin:0px;padding-left:5px;font-size:10px;padding-ri
 
 div.row{
 	margin:0px;
+  padding: 5% 0% 5% 0%;
 }
 div.col-sm-10{
 	width: 100%;
@@ -253,4 +254,27 @@ input#add_button:hover{
     padding-right: 15px;
     padding-left: 15px;
     margin-top: 3%;
+}
+
+
+a.go_home{
+  	background-color: #8D747A;
+    margin: 20px 0% 2% 90%;
+    padding: 1%;
+    border-radius: 5px;
+    width: 10%;
+    height: 150px;
+    font-size: 160%;
+
+}
+a.go_home:hover {
+  color: black;
+  text-decoration-line: none;
+  border: 1px solid black;
+}
+a.go_home:active{
+  color: black;
+  text-decoration-line: none;
+  border: 1px solid black;
+
 }
