--- a/apps/imageApp/static/imageApp/css/styles.css
+++ b/apps/imageApp/static/imageApp/css/styles.css
@@ -11,10 +11,10 @@
 
 img#most_popular_img{
   border: 1px solid black;
-  width: 32%;
-  height: 150px;
+  width: 16%;
   display: inline-block;
   vertical-align: bottom;
+  margin-left: 13%;
 }
 p.introducing{
   font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
@@ -65,7 +65,6 @@ h1{
 }
 div#img4.media{
   width: 85%;
-  height: 450px;
   margin:8%;
   background-color: #EEEEEE;
   color: red;
@@ -79,7 +78,6 @@ div#footer.media{
 img.image_4{
   border: 1px solid black;
   width: 20%;
-  height: 120px;
   display: inline;
   vertical-align: bottom;
   margin: 2%;
@@ -102,7 +100,6 @@ p.products{
   margin-left:2%;
   color: black;
   margin-bottom: 0px;
-  margin-top: 10%;
 }
 p.products_footer{
   font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
@@ -119,7 +116,7 @@ p#info_text.products{
   font-weight: bold;
   display: inline-block;
   width: 55%;
-  margin-top: 10%;
+  margin-top: 4%;
 }
 .footer_blocks{
   width: 28.9%;
@@ -255,7 +252,7 @@ a.button:hover {
  .social {
      -webkit-transform: scale(0.8);
      /* Browser Variations: */
-     
+
      -moz-transform: scale(0.8);
      -o-transform: scale(0.8);
      -webkit-transition-duration: 0.5s;
@@ -266,7 +263,7 @@ a.button:hover {
 /*
     Multicoloured Hover Variations
 */
- 
+
  #social-fb:hover {
      color: #3B5998;
  }
