--- a/apps/imageApp/templates/imageApp/see_product.html
+++ b/apps/imageApp/templates/imageApp/see_product.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Spring Time!!!</title>
+    <title>Spring Time</title>
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
     {%load static%}
     <meta name="viewport" content="width=device-width, initial-scale=1">
