--- a/apps/imageApp/templates/imageApp/all_show.html
+++ b/apps/imageApp/templates/imageApp/all_show.html
@@ -16,17 +16,17 @@
     <link rel="stylesheet" type="text/css" href="{% static 'imageApp/css/style2.css' %}">
   </head>
     <body>
-     
+
 
 
 
   <div class="container">
-    
+
     <div class="row">
           <a class="go_home" href="{%url 'spring:main'%}">Home</a>
-      
+
       <div class="col-md-12">
-        
+
       {% for i in yall %}
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail" >
@@ -47,20 +47,26 @@
                 </div>
                 <p id="all_product_descriptions">{{i.description}}</p>
                 <div class="row">
+                  <div class="col-md-6">
                     {% if currUser %}
-                      <div class="col-md-6">
-                          <form  action="" method="post">
-                          {% csrf_token %}
-                            <input class="btn  btn-product" type="submit" name="Like" value="Like" >
-                          </form>
-                      </div>
+                    <form  action="{% url 'spring:like' id=i.id %}" method="post">
+                     {% csrf_token %}
+                      <input class="btn  btn-product" type="submit" name="Like" value="Like" >
+                    </form>
                     {% endif %}
-                      <div class="col-md-6">
-                        <form  action="{% url 'spring:cart' %}" method="post">
-                        {% csrf_token %}
-                          <input class="btn  btn-product bottom" type="submit" name="add" value="Add" >
-                        </form>
-                      </div>
+                    <p>Likes: </p>
+                    {% for count in numLikes %}
+                    {% if forloop.counter == forloop.parentloop.counter %}
+                      {{ count.num_likes }}
+                      {% endif %}
+                    {% endfor %}
+                  </div>
+                  <div class="col-md-6">
+                    <form  action="{% url 'spring:cart' id=i.id %}" method="post">
+                     {% csrf_token %}
+                      <input class="btn  btn-product bottom" type="submit" name="add" value="Add" >
+                    </form>
+                  </div>
           </div>
         </div>
       </div>
